--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
 body {
-    background-color: #99582A;
+    background-color: #DDB892;
+    margin: 0 auto;
 }
 
 header {
-    color: #FFE6A7;
+    color: #9C6644;
     font-weight: 700;
     text-align: center;
     font-size: 38px;
+}
+
+button {
+    display: block;
+    background-color: #9C6644;
+    width: 100px;
+    height: 25px;
+    color: #E6CCB2;
+    font-weight: 700;
+    font-size: 14px;
+    border: 2px solid #7F5539;
+    margin: 20px auto auto auto;
+}
+
+h3 {
+    color: #9c6644;
+    font-weight: 700;
+}
+
+p {
+    color: #7F5539;
+    font-size: 18px;
+    font-weight: 700;
 }
