Update index.js & index.html & index.css
Refactored the user required information
Removed The Hobbit example
Changed p element to a div to display books that have been added
Added a for loop so that a div is created for each book added
Added p element for title, author, pages and read yes/no
Added appendChild for the information to be added to a div

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,14 @@ p {
     font-size: 18px;
     font-weight: 700;
 }
+
+.book {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+.book p {
+    margin: 0;
+    font-size: 16px;
+}
