--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ button {
     margin: 20px auto auto auto;
 }
 
+#newBookBtn {
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 p {
     color: #7F5539;
     font-size: 18px;
@@ -31,10 +37,14 @@ p {
 .book {
     margin-bottom: 10px;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid #9c6644;
 }
 
 .book p {
     margin: 0;
     font-size: 16px;
+}
+
+#newBookForm {
+    margin-left: 10px;
 }
