--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 body {
+    padding: 10px;
     background-color: #DDB892;
     margin: 0 auto;
 }
 
 header {
     color: #9C6644;
-    font-weight: 700;
     text-align: center;
     font-size: 38px;
+    padding-bottom: 20px;
+}
+
+header,
+button,
+label {
+    font-weight: 700;
 }
 
 button {
@@ -16,26 +23,26 @@ button {
     width: 100px;
     height: 25px;
     color: #E6CCB2;
-    font-weight: 700;
     font-size: 14px;
     border: 2px solid #7F5539;
     margin: 20px auto auto auto;
 }
 
 #newBookBtn {
-    margin-bottom: 10px;
-    margin-left: 10px;
     margin-right: 10px;
 }
 
-p {
-    color: #7F5539;
-    font-size: 18px;
-    font-weight: 700;
+#newBookBtn,
+#newBookForm {
+    margin-left: 10px;
+}
+
+.book,
+#newBookBtn {
+    margin-bottom: 10px;
 }
 
 .book {
-    margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #9c6644;
 }
@@ -45,6 +52,16 @@ p {
     font-size: 16px;
 }
 
-#newBookForm {
-    margin-left: 10px;
+
+#title,
+#author,
+#pages,
+#read {
+    background-color: #EDE0D4;
+    border: 1px solid #7F5539;
+    margin: 5px;
+}
+
+label {
+    color: #9C6644;
 }
