--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,66 @@
 body {
-    padding: 10px;
-    background-color: #DDB892;
-    margin: 0 auto;
+  padding: 10px;
+  background-color: #ddb892;
+  margin: 0 auto;
 }
 
 header {
-    color: #9C6644;
-    text-align: center;
-    font-size: 38px;
-    padding-bottom: 20px;
+  color: #9c6644;
+  font-size: 38px;
+  padding-bottom: 20px;
+  padding-left: 10px;
 }
 
 header,
 button,
 label {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 button {
-    display: block;
-    background-color: #9C6644;
-    width: 100px;
-    height: 25px;
-    color: #E6CCB2;
-    font-size: 14px;
-    border: 2px solid #7F5539;
-    margin: 20px auto auto auto;
+  display: block;
+  background-color: #9c6644;
+  width: 100px;
+  height: 25px;
+  color: #e6ccb2;
+  font-size: 14px;
+  border: 2px solid #7f5539;
+  margin: 20px auto auto auto;
 }
 
 #newBookBtn {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 #newBookBtn,
 #newBookForm {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .book,
 #newBookBtn {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .book {
-    padding: 10px;
-    border: 1px solid #9c6644;
+  padding: 10px;
+  border: 1px solid #9c6644;
 }
 
 .book p {
-    margin: 0;
-    font-size: 16px;
+  margin: 0;
+  font-size: 16px;
 }
-
 
 #title,
 #author,
 #pages,
 #read {
-    background-color: #EDE0D4;
-    border: 1px solid #7F5539;
-    margin: 5px;
+  background-color: #ede0d4;
+  border: 1px solid #7f5539;
+  margin: 5px;
 }
 
 label {
-    color: #9C6644;
+  color: #9c6644;
 }
